# MarkovAPI

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  mypy.ini  noxfile.py  pyproject.toml
docs/: conf.py  index.rst
src/: __init__.py
src/helpers/: __init__.py  markov.py
src/markov_api/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_model.py  test_routes.py
