[tool.poetry]
name = "markovapi"
version = "0.1.0"
description = "API for MarkovBot https://github.com/dmondo/markovbot"
authors = ["dmondo <dannysmondo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dmondo/MarkovAPI"
repository = "https://github.com/dmondo/MarkovAPI"
keywords = ["markov", "model", "API", "machine learning"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
